--- a/index.html
+++ b/index.html
@@ -51,14 +51,11 @@
       <button class="button__menu  modal-open-quote">
         <img src="./images/menu-bar.svg" alt="menu-bar" width="24" height="24">
       </button>
-      <!-- <button class="button__menu-close button__close is-hidden">
-        <img src="./images/icon-close-menu.svg" alt="icon close">
-      </button> -->
     </div>
 
     <div class="menu-mobile-container is-hidden">
-      <nav>
-        <ul class="list modal__menu-list">
+      <nav class="menu__mobile-nav">
+        <ul class="list menu__list">
           <li class="">
             <a href="" class="link menu__mobile-text header__link">Gallery</a>
           </li>
@@ -70,7 +67,7 @@
           </li>
         </ul>
       </nav>
-      <button class="button__menu_quote modal__quote-open">Get a free Quote</button>
+      <button class="button__menu_quote modal__quote-open button__menu-mob">Get a free Quote</button>
       <div class="footer__follower__container">
         <h3 class="menu__mobile-subtitle">Follow:</h3>
         <a href="https://www.instagram.com/zhurakiinc/" class="link menu__mobile-instagram">INSTAGRAM</a>
@@ -79,6 +76,9 @@
         <img src="./images/icon-close-menu.svg" alt="icon close">
       </button>
       </div>
+
+  
+
   </header>
 
   <section class="container__gray hero__container">
