adding email input

--- a/index.html
+++ b/index.html
@@ -655,9 +655,9 @@
         <div class="form__container">
           <img src="./images/user_black.svg" alt="icon user black" class="icon__user-black">
           <input type="text" name="quoteName" placeholder="Your name" required class="input form__text" />
-          <img src="./images/phone-call.svg" alt="Phone" class="icon__location" width="22" height="22">
+          <img src="./images/phone-black.svg" alt="Phone" class="icon__location" width="22" height="22">
           <input type="tel" name="quoteTel" placeholder="Phone" required class="input form__text" />
-          <img src="./images/phone-call.svg" alt="Phone" class="icon__location" width="22" height="22">
+          <img src="./images/mail-black.svg" alt="Email" class="icon__email-black" width="22" height="22">
           <input type="mail" name="quoteMail" placeholder="Email" required class="input form__text" />
           <textarea name="message" placeholder="Write your message" maxlength="375" required class="textarea review__textarea form__text"></textarea>
         </div>
