--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
+
 <body>
   <header class="container__header">
     <div class="menu__desktop-container">
@@ -27,17 +28,19 @@
          </svg>
       </a>
       <nav>
-       <ul class="header__navigation">
-         <li class="list">
-           <a href="./index.html" class="link header__text header__link">Home</a> </li>
-         <!-- <li class="list">
-           <a href="./gallery.html" class="link header__text">Gallery</a></li> -->
-         <!-- <li class="list">
-             <a href="" class="link header__text header__link">Our services</a>
+       <ul class="header__navigation list">
+         <li>
+           <a href="./index.html" class="link header__text header__link">Home</a> 
+          </li>
+         <!-- <li>
+           <a href="./gallery.html" class="link header__text header__link">Gallery</a>
          </li>
-         <li class="list">
+         <li>
+           <a href="" class="link header__text header__link">Our services</a>
+         </li>
+         <li>
              <a href="" class="link header__text header__link">Contacts</a>
-         </li> -->
+          </li> -->
        </ul>
       </nav>
       <a href="tel:3125361007" class="link header__phone header__text" >312-536-1007</a>
@@ -48,7 +51,7 @@
  
       <button class="header__button-form header__text modal__quote-open">Get a free Quote</button>
  
-      <button class="button__menu  modal-open-quote">
+      <button class="button__menu">
         <img src="./images/menu-bar.svg" alt="menu-bar" width="24" height="24">
       </button>
     </div>
@@ -57,6 +60,9 @@
       <nav class="menu__mobile-nav">
         <ul class="list menu__list">
           <li class="">
+            <a href="./index.html" class="link menu__mobile-text header__link">Home</a>
+          </li>
+          <!-- <li class="">
             <a href="" class="link menu__mobile-text header__link">Gallery</a>
           </li>
           <li class="">
@@ -64,7 +70,7 @@
           </li>
           <li class="">
             <a href="" class="link menu__mobile-text header__link">Contacts</a>
-          </li>
+          </li> -->
         </ul>
       </nav>
       <button class="button__menu_quote modal__quote-open button__menu-mob">Get a free Quote</button>
