--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <input type="tel" name="quoteTel" placeholder="Phone" required  class="quote__input form-text pure-white"/>
             <img src="./images/phone.svg" alt="phone ico" class="input__form__phone">
             <input type="mail" name="quoteMail" placeholder="Email" required class="quote__input form-text pure-white" />
-            <img src="./images/mail.svg" alt="Email" class="input__email-svg">
+            <img src="./images/mail.svg" alt="Email" class="input__email-svg-white">
             <textarea name="message" placeholder="Write your message" required class="quote__textarea form-text pure-white"></textarea>
           </div>
 
@@ -677,31 +677,6 @@
     </div>
   </div>
 
-<!-- <div class="backdrop__menu-mobile is-hidden">
-  <div class="modal__menu-mobile">
-    <nav>
-      <ul class="list modal__menu-list">
-        <li class="">
-          <a href="" class="link menu__mobile-text header__link">Gallery</a>
-        </li>
-        <li class="">
-          <a href="" class="link menu__mobile-text header__link">Our services</a>
-        </li>
-        <li class="">
-          <a href="" class="link menu__mobile-text header__link">Contacts</a>
-        </li>
-      </ul>
-    </nav>
-    <button class="button__menu_quote modal__quote-open">Get a free Quote</button>
-    <div class="footer__follower__container">
-      <h3 class="menu__mobile-subtitle">Follow:</h3>
-      <a href="https://www.instagram.com/zhurakiinc/" class="link menu__mobile-instagram">INSTAGRAM</a>
-    </div>
-  <button class="button__menu-close button__close">
-    <img src="./images/icon-close-menu.svg" alt="icon close">
-  </button>
-  </div>
-</div> -->
 
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script type="module" src="./js/swiper.js"></script>
