update errors of vaalidations

--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
   </header>
 
   <section class="container__gray hero__container">
-      <h1></h1>
+      <!-- <h1></h1> -->
       <h2 class="title">Home Remodeling <span class="hero__title-span">You Can Count On</span></h2>
       <div class="hero__block">
-        <article class="text hero__text">Transforming Kitchens, Bathrooms, Basements & More — With Quality Work and Honest Service</article>
+        <p class="text hero__text">Transforming Kitchens, Bathrooms, Basements & More — With Quality Work and Honest Service</p>
         <!-- <button class="hero__button text__link">View My Work
           <img src="./images/arrow-right.svg" class="button__svg" alt="arrow-right">
         </button> -->
@@ -130,7 +130,7 @@
       <p class="text__link ">Basement Remodeling</p>
   </div>
 
-  <form id="quoteForm" class=" picture__form"
+  <form id="quoteForm" class="picture__form"
           action="https://formspree.io/f/xvgroyva"
           method="POST">
           <h2 class="solve__text pure-white ">Get a Free Quote</h2>
@@ -139,7 +139,7 @@
             <img src="./images/user.svg" alt="user icon" class="input__user-svg">
             <input type="tel" name="quoteTel" placeholder="Phone" required  class="quote__input form-text pure-white"/>
             <img src="./images/phone.svg" alt="phone ico" class="input__phone-svg">
-            <input type="mail" name="quoteMail" placeholder="Email" required class="quote__input form-text pure-white" />
+            <input type="email" name="quoteMail" placeholder="Email" required class="quote__input form-text pure-white" />
             <img src="./images/mail.svg" alt="Email" class="input__email-svg">
             <textarea name="message" placeholder="Write your message" required class="quote__textarea form-text pure-white"></textarea>
           </div>
@@ -174,17 +174,17 @@
 <section class="container__gray advantages__container">
   <ul class="advantages__list">
     <li class="advantages__article">
-      <img src="./images/arrow-up-right.svg" class="advantages__svg" width="24" height="24">
+      <img src="./images/arrow-up-right.svg" class="advantages__svg" alt="arrow icon" width="24" height="24">
       <h3 class="subtitle__article">We Respect Your Time</h3>
       <p class="text__article">We show up when we say we will — no chasing, no delays</p>
     </li>
     <li class="advantages__article">
-      <img src="./images/arrow-up-right.svg" class="advantages__svg" width="24" height="24">
+      <img src="./images/arrow-up-right.svg" class="advantages__svg" alt="arrow icon" width="24" height="24">
       <h3 class="subtitle__article">Quality Comes First</h3>
       <p class="text__article">Very project is done with care, precision, and lasting results</p>
     </li>
     <li class="advantages__article">
-      <img src="./images/arrow-up-right.svg"  class="advantages__svg" width="24" height="24">
+      <img src="./images/arrow-up-right.svg"  class="advantages__svg" alt="arrow icon" width="24" height="24">
       <h3 class="subtitle__article">You Can Count On Us</h3>
       <p class="text__article">We treat your home like our own — with respect and attention to detail</p>
     </li>
@@ -370,7 +370,7 @@
               <source srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/2_qyievv.jpg 1x,
               https://res.cloudinary.com/ddtdtthqh/image/upload/v1748198365/zhuraki/swiper%20mini%20foto/2_2x_mtlgde.jpg 2x" 
               />
-              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/2_qyievv.jpg" alt="tv place"  "/>
+              <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748196135/zhuraki/swiper%20mini%20foto/2_qyievv.jpg" alt="tv place"  />
       </picture>
     </div>
     <div class="swiper-slide ">
@@ -556,7 +556,7 @@
 <section class="container__white talk__container">
   <div class="talk__text-container">
     <h2 class="subtitle pure-white">Ready to Talk About Your Project?</h2>
-    <article class="text talk__text">Send me a quick message and I’ll get back to you soon. No pressure — just honest answers and ideas</article>
+    <p class="text talk__text">Send me a quick message and I’ll get back to you soon. No pressure — just honest answers and ideas</p>
     <p class="solve__text pure-white">312-536-1007</p>
     
   </div>
@@ -569,7 +569,7 @@
             <img src="./images/user.svg" alt="user icon" class="input__form__user">
             <input type="tel" name="quoteTel" placeholder="Phone" required  class="quote__input form-text pure-white"/>
             <img src="./images/phone.svg" alt="phone ico" class="input__form__phone">
-            <input type="mail" name="quoteMail" placeholder="Email" required class="quote__input form-text pure-white" />
+            <input type="email" name="quoteMail" placeholder="Email" required class="quote__input form-text pure-white" />
             <img src="./images/mail.svg" alt="Email" class="input__email-svg-white">
             <textarea name="message" placeholder="Write your message" required class="quote__textarea form-text pure-white"></textarea>
           </div>
@@ -590,7 +590,7 @@
       </div>
       <div class="footer__text-container">
         <h3 class="footer__subtitle">our location</h3>
-        <article class="footer__article">4935 N Menard Ave, Illinois, Chicago</article>
+        <p class="footer__article">4935 N Menard Ave, Illinois, Chicago</p>
       </div>
     </div>
     
@@ -664,7 +664,7 @@
           <img src="./images/phone-black.svg" alt="Phone" class="icon__location" width="22" height="22">
           <input type="tel" name="quoteTel" placeholder="Phone" required class="input form__text" />
           <img src="./images/mail-black.svg" alt="Email" class="icon__email-black" width="22" height="22">
-          <input type="mail" name="quoteMail" placeholder="Email" required class="input form__text" />
+          <input type="email" name="quoteMail" placeholder="Email" required class="input form__text" />
           <textarea name="message" placeholder="Write your message" maxlength="375" required class="textarea review__textarea form__text"></textarea>
         </div>
   
