created  page gallery

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
          <li>
            <a href="./index.html" class="link header__text header__link">Home</a> 
           </li>
-         <!-- <li>
+         <li>
            <a href="./gallery.html" class="link header__text header__link">Gallery</a>
          </li>
          <li>
            <a href="" class="link header__text header__link">Our services</a>
          </li>
-         <li>
+         <!-- <li>
              <a href="" class="link header__text header__link">Contacts</a>
           </li> -->
        </ul>
@@ -62,13 +62,13 @@
           <li class="">
             <a href="./index.html" class="link menu__mobile-text header__link">Home</a>
           </li>
-          <!-- <li class="">
-            <a href="" class="link menu__mobile-text header__link">Gallery</a>
+          <li class="">
+            <a href="./gallery.html" class="link menu__mobile-text header__link">Gallery</a>
           </li>
           <li class="">
             <a href="" class="link menu__mobile-text header__link">Our services</a>
           </li>
-          <li class="">
+          <!-- <li class="">
             <a href="" class="link menu__mobile-text header__link">Contacts</a>
           </li> -->
         </ul>
@@ -438,9 +438,6 @@
     <h2 class="subtitle solve__subtitle">Testimonials</h2>
     <div class="swiper testimonialSwiper">
     <div class="swiper-wrapper" id="reviews-list">
-  
-  
-  
    </div>
   
    <div class="testimonial__button-container">
@@ -617,7 +614,6 @@
       <div class="footer__container__second">
         <div class="footer__text-container">
           <h3 class="footer__subtitle">Discuss the project:</h3>
-          <!-- <article class="footer__article">312-536-1007</article> -->
            <a href="tel:3125361007" class="link footer__article">312-536-1007</a>
         </div>
         <div class="footer__text-container">
