adding images to hero section gallery

--- a/gallery.html
+++ b/gallery.html
@@ -91,19 +91,213 @@
                 <h2 class="title gallery__title">OUR projects</h2>
                 
                 <ul class="list gallery__list">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>
+                        <picture>
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750421184/zhuraki/our%20projects/tablet/1-tab-1x-min_vaaweh.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750421184/zhuraki/our%20projects/tablet/1-tab-2x-min_zftlho.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/1-mob-1x-min_coivtp.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/1-mob-2x-min_dzv8yx.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/1-mob-1x-min_coivtp.jpg"
+                                alt="room tv" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750421184/zhuraki/our%20projects/tablet/2-tab-1x-min_z9qbvj.jpg 1x, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1750421184/zhuraki/our%20projects/tablet/2-tab-2x-min_zp1sim.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/2-mob-1x-min_s4zttn.jpg 1x, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/2-mob-2x-min_zyuhqn.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/2-mob-1x-min_s4zttn.jpg"
+                                alt="tv zone" />   
+                        </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/3-mob-1x-min_j4jsw1.jpg 1x, 
+                                https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/3-mob-2x-min_fwo0ef.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415120/zhuraki/our%20projects/mobile/3-mob-1x-min_j4jsw1.jpg"
+                                 alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/4-mob-1x-min_rzm5ww.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/4-mob-2x-min_tcxxst.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/4-mob-1x-min_rzm5ww.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/5-mob-1x-min_ovhnor.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/5-mob-2x-min_ueh8k8.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415121/zhuraki/our%20projects/mobile/5-mob-1x-min_ovhnor.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415122/zhuraki/our%20projects/mobile/6-mob-1x-min_fp0ork.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415122/zhuraki/our%20projects/mobile/6-mob-2x-min_o7xgqk.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415122/zhuraki/our%20projects/mobile/6-mob-1x-min_fp0ork.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415123/zhuraki/our%20projects/mobile/7-mob-1x-min_uuug1u.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415123/zhuraki/our%20projects/mobile/7-mob-2x-min_q24pug.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415123/zhuraki/our%20projects/mobile/7-mob-1x-min_uuug1u.jpg"
+                                 alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415123/zhuraki/our%20projects/mobile/8-mob-1x-min_xpubrm.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415124/zhuraki/our%20projects/mobile/8-mob-2x-min_uypbfe.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415123/zhuraki/our%20projects/mobile/8-mob-1x-min_xpubrm.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415124/zhuraki/our%20projects/mobile/9-mob-1x-min_iouuyg.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415125/zhuraki/our%20projects/mobile/9-mob-2x-min_jqbpgw.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415124/zhuraki/our%20projects/mobile/9-mob-1x-min_iouuyg.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/10-mob-2x-min_fcvjmi.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415125/zhuraki/our%20projects/mobile/10-mob-1x-min_yosvdx.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/10-mob-2x-min_fcvjmi.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/11-mob-1x-min_p84884.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/11-mob-2x-min_wyrc1i.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/11-mob-1x-min_p84884.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
+                    <li>
+                        <picture>
+                            <!-- <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_1x-min_k3dmzn.jpg 1x,
+                                                    https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_desk_2x-min_ok4lni.jpg 2x"
+                                media="(min-width: 1440px)" />
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_1x-min_yudgqm.jpg 1x, 
+                                                   https://res.cloudinary.com/ddtdtthqh/image/upload/v1748095615/zhuraki/help/help_tab_2x-min_fcaixm.jpg 2x"
+                                media="(min-width: 744px) and (max-width: 1439px)" /> -->
+                            <source
+                                srcset="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/12-mob-1x-min_lqeh81.jpg 1x, 
+                                        https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/12-mob-2x-min_eh2o2c.jpg 2x"
+                                media="(max-width: 743px)" />
+                            <img src="https://res.cloudinary.com/ddtdtthqh/image/upload/v1750415126/zhuraki/our%20projects/mobile/12-mob-1x-min_lqeh81.jpg"
+                                alt="kitchen" />    </picture>
+                    </li>
                 </ul>
+                <button type="button" class="gallery__button__load">Load more</button>
             </div>
         </section>
 
